--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -4,8 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:view="clr-namespace:PinusPengger.View" 
-        xmlns:model="clr-namespace:PinusPengger.Model"
+        xmlns:uc="clr-namespace:PinusPengger.UserControls"
         xmlns:viewModel ="clr-namespace:PinusPengger.ViewModel"
+        xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
         Title="Hotel Jaya Abadi" 
         Height="540" 
@@ -17,39 +18,36 @@
     </Window.DataContext>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="30"/>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="30*"/>
+            <RowDefinition Height="50*"/>
+            <RowDefinition Height="430*"/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" 
-              Background="Gray" 
-              MouseDown="DragApp">
+              Background="Orange" 
+              MouseDown="DragApp"> 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition Width="50"/>
+                <ColumnDefinition Width="80"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="1"
                         HorizontalAlignment="Right"
-                        VerticalAlignment="Top" 
-                        Margin="0,5,5,0"
+                        VerticalAlignment="Center" 
+                        Margin="0,0,10,0"
                         Orientation="Horizontal" 
                         FlowDirection="LeftToRight">
-                <Button x:Name="btnMinimize"                    
-                    BorderThickness="0"
-                    Foreground="White"
-                    Cursor="Hand"
-                    Click="MinimizeApp">
+                <Button x:Name="btnMinimize" 
+                        BorderThickness="0"
+                        Foreground="White"
+                        Cursor="Hand"
+                        Click="MinimizeApp">
                     <Button.Content>
-                        <Path Data="{StaticResource MinimizeIcon}" 
-                          Stretch="Uniform"
-                          Fill="Black"
-                          Width="10" 
-                          Height="10"
-                          HorizontalAlignment="Center" 
-                          VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5"
-                          Margin="1,0,0,0"/>
+                        <icon:PackIconMaterial Kind="WindowMinimize"
+                                               Width="10" 
+                                               Height="10"
+                                               HorizontalAlignment="Center" 
+                                               VerticalAlignment="Center"
+                                               Margin="1,0,0,0"
+                                               Foreground="White"/>
                     </Button.Content>
                     <Button.Style>
                         <Style TargetType="Button">
@@ -80,14 +78,11 @@
                     Click="CloseApp"
                     Margin="5">
                     <Button.Content>
-                        <Path Data="{StaticResource CloseAppIcon}" 
-                          Stretch="Uniform"
-                          Fill="Black"
+                        <icon:PackIconMaterial Kind="WindowClose"
                           Width="10" 
                           Height="10"
                           HorizontalAlignment="Center" 
                           VerticalAlignment="Center"
-                          RenderTransformOrigin="0.5,0.5"
                           Margin="1,0,0,0"/>
                     </Button.Content>
                     <Button.Style>
@@ -152,28 +147,53 @@
                                  Command="{Binding HistoryViewCommand}"/>
                 </StackPanel>
                 <Button Grid.Column="5" 
-                        Background="Transparent"
-                        BorderThickness="0">
+                        BorderThickness="0"
+                        Padding="-8"
+                        Cursor="Hand">
                     <Grid Height="50" Width="125">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="50"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <Path Data="{StaticResource CircleUserIcon}"
+                        <icon:PackIconMaterial
+                            Kind="AccountCircle"
                               Grid.Column="0"
-                              Stretch="Uniform"
-                              Fill="Black"
-                              HorizontalAlignment="Right"
-                              VerticalAlignment="Center"
                               Width="30"
-                              Height="30" 
-                              RenderTransformOrigin="0.5,0.5"/>
+                              Height="30"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"/>
                         <TextBlock Grid.Column="1" 
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center"
                                    FontSize="21"
                                    Text="User"/>
                     </Grid>
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Background" Value="Transparent"/>
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border Background="{TemplateBinding Background}" 
+                                                BorderBrush="Black" 
+                                                BorderThickness="0">
+                                            <ContentPresenter HorizontalAlignment="Center" 
+                                                              VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background">
+                                        <Setter.Value>
+                                            <SolidColorBrush Color="Black" Opacity="0.3"/>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
                 </Button>
             </Grid>
         </Border>
