kau hancurkan aku dengan sikatmu

--- a/View/HistoryPage.xaml
+++ b/View/HistoryPage.xaml
@@ -49,13 +49,11 @@
                          Foreground="DarkGray"
                          Text="Kode"/>
                 <Button Height="25"
-                        Width="40">
-                    <Path Data="{StaticResource MagnifyingGlassIcon}"
-                          Grid.Column="1"
-                          Stretch="Uniform"
-                          Fill="Black"
-                          Width="15"
-                          Height="15"
+                        Width="40"
+                        Padding="-8">
+                    <icon:PackIconMaterial Kind="Magnify"
+                          Width="18"
+                          Height="18"
                           HorizontalAlignment="Center"
                           VerticalAlignment="Center"
                           Margin="0,0,0,1" />
