--- a/View/HomePage.xaml
+++ b/View/HomePage.xaml
@@ -1,13 +1,15 @@
 ﻿<Page x:Class="PinusPengger.View.HomePage"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:controller="clr-namespace:PinusPengger.ViewModel"
-             xmlns:model="clr-namespace:PinusPengger.Model"
-             xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             mc:Ignorable="d" 
-             d:DesignHeight="420" d:DesignWidth="920">
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:controller="clr-namespace:PinusPengger.ViewModel"
+      xmlns:model="clr-namespace:PinusPengger.Model"
+      xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
+      xmlns:sys="clr-namespace:System;assembly=mscorlib"
+      mc:Ignorable="d" 
+      d:DesignHeight="420" 
+      d:DesignWidth="920">
     <Page.Resources>
         <controller:Ticker x:Key="ticker"/>
     </Page.Resources>
@@ -43,17 +45,15 @@
                         Orientation="Horizontal">
                 <TextBox Width="200"
                          Height="25"
-                         FontSize="18"
+                         FontSize="14"
                          Foreground="DarkGray"
                          Text="Kode"/>
                 <Button Height="25"
-                        Width="40">
-                    <Path Data="{StaticResource MagnifyingGlassIcon}"
-                          Grid.Column="1"
-                          Stretch="Uniform"
-                          Fill="Black"
-                          Width="15"
-                          Height="15"
+                        Width="40"
+                        Padding="-8">
+                    <icon:PackIconMaterial Kind="Magnify"
+                          Width="18"
+                          Height="18"
                           HorizontalAlignment="Center"
                           VerticalAlignment="Center"
                           Margin="0,0,0,1" />
