--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -144,12 +144,12 @@
                          Grid.Row="2" 
                          Height="25" 
                          Width="275" 
-                         Text="{Binding Path=Username, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                         Text="{Binding Path=Username, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}"/>
                 <TextBox 
                          Grid.Row="4"
                          Height="25"
                          Width="275"
-                         Text="{Binding Path=Password, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
+                         Text="{Binding Path=Password, UpdateSourceTrigger=PropertyChanged, Mode=OneWayToSource}"/>
                 <Button Grid.Row="5"
                         Height="20"
                         Width="80" 
