--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -126,25 +126,117 @@
                             Orientation="Horizontal">
                     <RadioButton Height="40"
                                  Width="100"
-                                 Style="{StaticResource NavbarButton}" 
-                                 Content="Home"
-                                 Background="Gray"
+                                 Cursor="Hand"
                                  Margin="10,0,10,0"
-                                 Command="{Binding HomeViewCommand}"/>
+                                 Command="{Binding HomeViewCommand}"> 
+                        <RadioButton.Content>
+                            <TextBlock Text="Home"
+                                       FontFamily="Dubai"
+                                       FontWeight="Bold" 
+                                       FontSize="15"
+                                       Foreground="White"/>
+                        </RadioButton.Content>
+                        <RadioButton.Style>
+                            <Style TargetType="RadioButton">
+                                <Setter Property="Background" Value="Purple"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="RadioButton">
+                                            <Border Background="{TemplateBinding Background}" 
+                                                    BorderBrush="Black" 
+                                                    BorderThickness="0"
+                                                    CornerRadius="18">
+                                                <ContentPresenter HorizontalAlignment="Center" 
+                                                              VerticalAlignment="Center"/>
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="MediumPurple"/>
+                                    </Trigger>
+                                    <Trigger Property="IsChecked" Value="True">
+                                        <Setter Property="Background" Value="Tomato"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </RadioButton.Style>
+                    </RadioButton>
                     <RadioButton Height="40"
                                  Width="100"
-                                 Style="{StaticResource NavbarButton}" 
+                                 Cursor="Hand"
                                  Content="Reservation"
-                                 Background="Gray"
-                                 Command="{Binding ReservationViewCommand}"/>
+                                 Margin="0,0,10,0"
+                                 FontFamily="Dubai"
+                                 FontWeight="Bold"
+                                 FontSize="15"
+                                 Foreground="White"
+                                 Command="{Binding ReservationViewCommand}">
+                        <RadioButton.Style>
+                            <Style TargetType="{x:Type RadioButton}">
+                                <Setter Property="Background" Value="Purple"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type RadioButton}">
+                                            <Border Background="{TemplateBinding Background}" 
+                                                    BorderBrush="Black" 
+                                                    BorderThickness="0"
+                                                    CornerRadius="18">
+                                                <ContentPresenter HorizontalAlignment="Center" 
+                                                              VerticalAlignment="Center"/>
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="MediumPurple"/>
+                                    </Trigger>
+                                    <Trigger Property="IsChecked" Value="True">
+                                        <Setter Property="Background" Value="Tomato"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </RadioButton.Style>
+                    </RadioButton>
                     <RadioButton Height="40"
                                  Width="100"
-                                 Style="{StaticResource NavbarButton}" 
+                                 Cursor="Hand"
                                  Content="History"
-                                 Background="Gray"
-                                 Margin="10,0,0,0"
-                                 IsChecked="True"
-                                 Command="{Binding HistoryViewCommand}"/>
+                                 Margin="0,0,0,0"
+                                 FontFamily="Dubai"
+                                 FontWeight="Bold"
+                                 FontSize="15"
+                                 Foreground="White"
+                                 Command="{Binding HistoryViewCommand}">
+                        <RadioButton.Style>
+                            <Style TargetType="{x:Type RadioButton}">
+                                <Setter Property="Background" Value="Purple"/>
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type RadioButton}">
+                                            <Border Background="{TemplateBinding Background}" 
+                                                    BorderBrush="Black" 
+                                                    BorderThickness="0"
+                                                    CornerRadius="18">
+                                                <ContentPresenter HorizontalAlignment="Center" 
+                                                              VerticalAlignment="Center"/>
+                                            </Border>
+                                        </ControlTemplate> 
+                                    </Setter.Value>
+                                </Setter>
+                                <Style.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="True">
+                                        <Setter Property="Background" Value="MediumPurple"/>
+                                    </Trigger>
+                                    <Trigger Property="IsChecked" Value="True">
+                                        <Setter Property="Background" Value="Tomato"/>
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </RadioButton.Style>
+                    </RadioButton>
                 </StackPanel>
                 <Button Grid.Column="5" 
                         BorderThickness="0"
