--- a/UserControls/RegularRoom.xaml
+++ b/UserControls/RegularRoom.xaml
@@ -5,7 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PinusPengger.UserControls"
              mc:Ignorable="d">
-    <Button>
-        
+    <Button Width="45"
+            Height="45">
+        <Button.Content>
+            <Label Content=""/>
+        </Button.Content>
     </Button>
 </UserControl>
