--- a/UserControls/RegularRoom.xaml
+++ b/UserControls/RegularRoom.xaml
@@ -4,11 +4,51 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PinusPengger.UserControls"
-             mc:Ignorable="d">
+             mc:Ignorable="d"
+             Height="50"
+             Width="50"
+             Background="White">
     <Button Width="45"
             Height="45">
         <Button.Content>
             <Label Content=""/>
         </Button.Content>
+        <Button.Style>
+            <Style TargetType="Button">
+                <Setter Property="Background" Value="Red"/>
+                <Setter Property="Effect">
+                    <Setter.Value>
+                        <DropShadowEffect BlurRadius="0"
+                                          ShadowDepth="0"
+                                          Color="Black"/>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="Button">
+                            <Border Background="{TemplateBinding Background}"
+                                    CornerRadius="5"
+                                    BorderThickness="0"
+                                    BorderBrush="Black"
+                                    Effect="{TemplateBinding Effect}">
+                                <ContentPresenter HorizontalAlignment="Center"
+                                                  VerticalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+                <Style.Triggers>
+                    <Trigger Property="IsMouseOver" Value="True">
+                        <Setter Property="Effect">
+                            <Setter.Value>
+                                <DropShadowEffect BlurRadius="6"
+                                                  ShadowDepth="3"
+                                                  Color="Black"/>
+                            </Setter.Value>
+                        </Setter>
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+        </Button.Style>
     </Button>
 </UserControl>
