--- a/View/MainWindow.xaml
+++ b/View/MainWindow.xaml
@@ -247,13 +247,12 @@
                             <ColumnDefinition Width="50"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <icon:PackIconMaterial
-                            Kind="AccountCircle"
-                              Grid.Column="0"
-                              Width="30"
-                              Height="30"
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"/>
+                        <icon:PackIconMaterial Kind="AccountCircle"
+                                               Grid.Column="0"
+                                               Width="30"
+                                               Height="30"
+                                               HorizontalAlignment="Center"
+                                               VerticalAlignment="Center"/>
                         <TextBlock Grid.Column="1" 
                                    VerticalAlignment="Center"
                                    HorizontalAlignment="Center"
@@ -294,8 +293,8 @@
                HorizontalAlignment="Center" 
                VerticalAlignment="Top"
                Height="420"
+               Width="920"
                NavigationUIVisibility="Hidden">
-
         </Frame>
     </Grid>
 </Window>
