--- a/View/ReservasiPage.xaml
+++ b/View/ReservasiPage.xaml
@@ -30,11 +30,7 @@
         </StackPanel>
         <WrapPanel Grid.Row="2" 
                    Margin="15">
-            <uc:RegularRoom/>
-            <uc:RegularRoom/>
-            <uc:RegularRoom/>
-            <uc:RegularRoom/>
-            <uc:RegularRoom/>
+            <uc:RegularRoom ButtonColor="Red"/>
             <uc:RegularRoom/>
             <uc:RegularRoom/>
             <uc:RegularRoom/>
