--- a/View/ProfileWindowPopup.xaml
+++ b/View/ProfileWindowPopup.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PinusPengger.View"
+        xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"      
         Title="ProfileWindowPopup" 
         Height="120" 
@@ -61,15 +62,13 @@
                                 <ColumnDefinition Width="auto"/>
                                 <ColumnDefinition Width="auto"/>
                             </Grid.ColumnDefinitions>
-                            <Path Data="{StaticResource LogutIcon}"
-                              Grid.Column="0"
-                              Width="10"
-                              Height="10"
-                              HorizontalAlignment="Center"
-                              VerticalAlignment="Center"
-                              Stretch="Uniform" 
-                              Margin="0,0,5,0"
-                              Fill="White"/>
+                            <icon:PackIconMaterial Kind="Logout"
+                                                   Grid.Column="0"
+                                                   Width="10"
+                                                   Height="10"
+                                                   HorizontalAlignment="Center"
+                                                   VerticalAlignment="Center"
+                                                   Margin="0,0,5,0"/>
                             <TextBlock Grid.Column="1"
                                    Text="Logout"
                                    FontSize="10"
