--- a/View/HomePage.xaml
+++ b/View/HomePage.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:controller="clr-namespace:PinusPengger.ViewModel"
+      xmlns:viewModel="clr-namespace:PinusPengger.ViewModel"
       xmlns:model="clr-namespace:PinusPengger.Model"
       xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
       xmlns:sys="clr-namespace:System;assembly=mscorlib"
@@ -11,8 +11,11 @@
       d:DesignHeight="420" 
       d:DesignWidth="920">
     <Page.Resources>
-        <controller:Ticker x:Key="ticker"/>
+        <viewModel:Ticker x:Key="ticker"/>
     </Page.Resources>
+    <Page.DataContext>
+        <viewModel:HomeViewModel/>
+    </Page.DataContext>
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
@@ -47,16 +50,17 @@
                          Height="25"
                          FontSize="14"
                          Foreground="DarkGray"
-                         Text="Kode"/>
+                         Text="{Binding Path=Target, UpdateSourceTrigger=PropertyChanged, Mode=TwoWay}"/>
                 <Button Height="25"
                         Width="40"
-                        Padding="-8">
+                        Padding="-8"
+                        Command="{Binding SearchCommand}">
                     <icon:PackIconMaterial Kind="Magnify"
                           Width="18"
                           Height="18"
                           HorizontalAlignment="Center"
                           VerticalAlignment="Center"
-                          Margin="0,0,0,1" />
+                          Margin="0,0,0,1"/>
                 </Button>
             </StackPanel>
         </StackPanel>
@@ -65,18 +69,45 @@
                   Height="290"
                   AutoGenerateColumns="False"
                   Grid.Row="3"
-                  CanUserAddRows="True">
+                  CanUserAddRows="False"
+                  IsReadOnly="True"
+                  ItemsSource="{Binding ReservationJoineds}">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Kode Pemesanan" 
-                                    Binding="{Binding KodePemesanan}"/>
-                <DataGridTextColumn Header="Nama" Width="200" 
-                                    Binding="{Binding Person}"/>
-                <DataGridTextColumn Header="Nomor Kamar" Width="*"  
-                                    Binding="{Binding Room}"/>
-                <DataGridTextColumn Header="Tanggal Checkin" Width="*" 
-                                    Binding="{Binding CheckIn, StringFormat='dd/MM/yyyy'}"/>
-                <DataGridTextColumn Header="Tanggal Checkout" Width="*"  
-                                    Binding="{Binding CheckOut, StringFormat='dd/MM/yyyy'}"/>
+                <DataGridTextColumn Header="Kode Pemesanan" Binding="{Binding ReservationEntity.ResCode}">
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Nama" Width="200" Binding="{Binding CustomerEntity.CustName}">
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Nomor Kamar" Width="*"  Binding="{Binding RoomEntity.RoomCode}">
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Tanggal Checkin" Width="*" Binding="{Binding ReservationEntity.ResCheckIn, StringFormat='dd/MM/yyyy'}">
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Tanggal Checkout" Width="*"  Binding="{Binding ReservationEntity.ResCheckOut, StringFormat='dd/MM/yyyy'}">
+                    <DataGridTextColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        </Style>
+                    </DataGridTextColumn.HeaderStyle>
+                </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
