--- a/View/DataKamarPopUp.xaml
+++ b/View/DataKamarPopUp.xaml
@@ -4,9 +4,73 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PinusPengger.View"
+        xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="DataKamarPopUp" Height="450" Width="800">
+        Title="DataKamarPopUp"
+        Height="400"
+        Width="860"
+        WindowStyle="None"
+        ResizeMode="CanMinimize">
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0.105*"/>
+            <RowDefinition/>
+            <RowDefinition Height="0.205*"/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0"
+                   Text="K.2.3"
+                   VerticalAlignment="Center"
+                   FontFamily="Inter"
+                   FontSize="18"
+                   FontWeight="Bold"
+                   Margin="5,0,0,0"/>
+        <Button Grid.Row="0"                   
+                    BorderThickness="0"
+                    Foreground="White"
+                    Cursor="Hand"
+                    Click="CloseApp"
+                    Margin="5"
+                HorizontalAlignment="Right">
+            <Button.Content>
+                <icon:PackIconMaterial Kind="WindowClose"
+                          Width="10" 
+                          Height="10"
+                          HorizontalAlignment="Center" 
+                          VerticalAlignment="Center"
+                          Margin="1,0,0,0"/>
+            </Button.Content>
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="Background" Value="Red"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="IndianRed"/>
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </Button.Style>
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Width="18" Height="18"
+                                        CornerRadius="9"
+                                        Background="{TemplateBinding Background}">
+                        <ContentPresenter VerticalAlignment="Center"
+                                              HorizontalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="0.4*"/>
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.8*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </Grid>
     </Grid>
 </Window>
