--- a/View/ProfileWindowPopup.xaml
+++ b/View/ProfileWindowPopup.xaml
@@ -88,8 +88,7 @@
                     VerticalAlignment="Top"
                     CornerRadius="10,10,0,0"
                     Background="Tomato"/>
-            <Border x:Name="profileBorder"
-                    Grid.Row="1"
+            <Border Grid.Row="1"
                     Height="40"
                     Width="40"
                     CornerRadius="32"
